--- a/fenix/app/metrics.yaml
+++ b/fenix/app/metrics.yaml
@@ -805,6 +805,28 @@ onboarding:
     metadata:
       tags:
         - Onboarding
+  gpt_integration:
+    type: event
+    description:
+      The user entered an API key for GPT integration.
+    extra_keys:
+      api_key:
+        type: string
+        description: |
+          A string that indicates the API key
+    bugs:
+      - https://github.com/mozilla-mobile/fenix/issues/0000000
+    data_reviews:
+      - https://github.com/mozilla-mobile/fenix/pull/0000000
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - android-probes@mozilla.com
+      - kbrosnan@mozilla.com
+    expires: never
+    metadata:
+      tags:
+        - Onboarding
   welcome_card_impression:
     type: event
     description:
